luxtensor/build_error.txt
cargo :    Compiling luxtensor-storage v0.4.0 (D
:\venera\cardano\moderntensor\moderntensor\luxte
nsor\crates\luxtensor-storage)
At line:1 char:1
+ cargo build --package luxtensor-storage 2>&1 
| Out-File -FilePath "bu ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (   
    Compiling lu...tensor-storage):String) [],  
   RemoteException
    + FullyQualifiedErrorId : NativeCommandErro 
   r
 
warning: unused import: `Write`
  --> crates\luxtensor-storage\src\maintenance.r
s:10:27
   |
10 | use std::io::{self, Read, Write};
   |                           ^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of 
`#[warn(unused)]`) on by default

warning: unused import: `Read`
  --> crates\luxtensor-storage\src\maintenance.r
s:10:21
   |
10 | use std::io::{self, Read, Write};
   |                     ^^^^

error[E0502]: cannot borrow `*self` as mutable 
because it is also borrowed as immutable
   --> 
crates\luxtensor-storage\src\checkpoint.rs:144:9
    |
112 |         let checkpoint = 
rocksdb::checkpoint::Checkpoint::new(&self.db)
    |                                           
                    -------- immutable borrow 
occurs here
...
144 |         self.prune_old_checkpoints();
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
mutable borrow occurs here
...
149 |     }
    |     - immutable borrow might be used 
here, when `checkpoint` is dropped and runs the 
`Drop` code for type `Checkpoint`

For more information about this error, try 
`rustc --explain E0502`.
warning: `luxtensor-storage` (lib) generated 2 
warnings
error: could not compile `luxtensor-storage` 
(lib) due to 1 previous error; 2 warnings 
emitted
